feat: inject Clock for consistent date handling in transaction search